--- a/lab4a.html
+++ b/lab4a.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <!-- Task 1 -->
-    <h2>Task 1: Change Paragraph Content</h2>
+    <h2>Change Paragraph Content</h2>
     <div id="myElement">
         <p id="text">Welcome to my website!</p>
     </div>
@@ -19,7 +19,7 @@
     </script>
 
     <!-- Task 2 -->
-    <h2>Task 2: Number Validation</h2>
+    <h2> Number Validation</h2>
     <input type="text" id="userInput" placeholder="Enter a number">
     <button onclick="checkInput()">Check</button>
     <script>
@@ -37,7 +37,7 @@
     </script>
 
     <!-- Task 3 -->
-    <h2>Task 3: Loop Output</h2>
+    <h2> Loop Output</h2>
     <p id="demo"></p>
     <script>
         let text = "";
